add: Fix code smells.